--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 <section id="home" class="hero">
     <div class="hero-content">
         <h1>Reg Skelton</h1>
-        <p class="tagline">Hobbyist Software Engineer</p>
+        <p class="tagline">Software Engineer</p>
         <p>
             Exploring the world of software development through hands-on projects and continuous learning.
             Building solutions that solve real problems while expanding my technical skills.
@@ -485,7 +485,69 @@
     <p class="section-subtitle">A collection of my completed, ongoing, and planned projects</p>
 
     <div class="projects-grid">
-        <!-- Completed Project -->
+
+        <div class="project-card">
+            <div class="project-status status-progress">⚡ In Progress</div>
+            <div class="project-image"><img src="images/gravity_simulator.png" alt="A screenshot of of the latest version of the simulator, showing all 8 planets orbiting Sol, with a grid for the orbital plane, and optional log scaling" class="project-image"></div>
+            <div class="project-content">
+                <h3>Planetary Gravity 2025</h3>
+                <p>
+                    3d gravity simulator set in our very own Solar System (pure vibes edition)
+                </p>
+                <div class="project-tags">
+                    <span class="tag">Pure Vibes (Claude 4.5)</span>
+                    <span class="tag">HTML physics</span>
+                    <span class="tag">Collisions</span>
+                    <span class="tag">Projections</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://regskelton.github.io/gravity/gravity_simulation.html" class="project-link link-primary">Live Demo</a>
+                    <a href="https://github.com/regskelton/gravity/blob/master/gravity_simulation.html" class="project-link link-secondary">View Code</a>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-status status-progress">⚡ In Progress</div>
+            <div class="project-image"><img src="images/bouncing_balls.png" alt="A screenshot showing coloured bouncing around in a 3d box, viewed from a spinning camera" class="project-image"></div>
+            <div class="project-content">
+                <h3> Bouncing Balls</h3>
+                <p>
+                    Balls bouncing around in a box under gravity
+                </p>
+                <div class="project-tags">
+                    <span class="tag">Pure Vibes (Claude 4.5)</span>
+                    <span class="tag">HTML physics</span>
+                    <span class="tag">Collisions</span>
+                    <span class="tag">Projections</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://regskelton.github.io/fractals/moving_spheres.html" class="project-link link-primary">Live Demo</a>
+                    <a href="https://github.com/regskelton/fractals/blob/master/moving_spheres.html" class="project-link link-secondary">View Code</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <div class="project-status status-progress">⚡ In Progress</div>
+            <div class="project-image"><img src="images/bouncing_dots.png" alt="A screenshot showing coloured circles dropping from the roof and accumulating along the floor" class="project-image"></div>
+            <div class="project-content">
+                <h3>Bouncing Dots</h3>
+                <p>
+                    Circles dropping from the roof
+                </p>
+                <div class="project-tags">
+                    <span class="tag">Pure Vibes (Claude 4.5)</span>
+                    <span class="tag">HTML physics</span>
+                    <span class="tag">Collisions</span>
+                    <span class="tag">Projections</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://regskelton.github.io/fractals/moving_circles.html" class="project-link link-primary">Live Demo</a>
+                    <a href="https://github.com/regskelton/fractals/blob/master/moving_circles.html" class="project-link link-secondary">View Code</a>
+                </div>
+            </div>
+        </div>
+
         <div class="project-card">
             <div class="project-status status-completed">✓ Completed</div>
             <div class="project-image">
@@ -495,124 +557,19 @@
                 <h3>Planetary Gravity Simulator (2019)</h3>
                 <p>
                     Exploration of Newton's law of universal gravitation in 2d space
-                    including energy conservation (potential & kinetic) and momentum.
+                    including energy conservation (potential & kinetic) and momentum
                 </p>
                 <div class="project-tags">
                     <span class="tag">JavaScript</span>
                     <span class="tag">HTML/CSS</span>
                     <span class="tag">Canvas</span>
+                    <span class="tag">Handcrafted</span>
+                    <span class="tag">Artisanal</span>
+                    <span class="tag">Old School Software Development</span>
                 </div>
                 <div class="project-links">
                     <a href="https://regskelton.github.io/gravity/" class="project-link link-primary">Live Demo</a>
                     <a href="https://github.com/regskelton/gravity" class="project-link link-secondary">View Code</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- In Progress Project -->
-        <div class="project-card">
-            <div class="project-status status-progress">⚡ In Progress</div>
-            <div class="project-image">🌤️</div>
-            <div class="project-content">
-                <h3>Physics & Graphics</h3>
-                <p>
-                    Experiments in using AI to generate fractals, bouncing circles & spheres
-                </p>
-                <div class="project-tags">
-                    <span class="tag">Claude 4.5</span>
-                    <span class="tag">Collisions</span>
-                    <span class="tag">Projection</span>
-                </div>
-                <div class="project-links">
-                    <a href="https://regskelton.github.io/fractals/fractals.html" class="project-link link-primary">Live Demo - fractals (0% ai)</a>
-                    <a href="https://regskelton.github.io/fractals/moving_circles.html" class="project-link link-primary">Live Demo - falling circles (100% ai)</a>
-                    <a href="https://regskelton.github.io/fractals/moving_spheres.html" class="project-link link-primary">Live Demo - falling spheres (100% ai)</a>
-                    <a href="https://github.com/regskelton/fractals" class="project-link link-secondary">View Code</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Planned Project -->
-        <div class="project-card">
-            <div class="project-status status-planned">📋 Planned</div>
-            <div class="project-image">🎮</div>
-            <div class="project-content">
-                <h3>Retro Game Engine</h3>
-                <p>
-                    A lightweight 2D game engine built from scratch to understand graphics rendering,
-                    game loops, and physics. Target: recreate classic arcade games.
-                </p>
-                <div class="project-tags">
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Canvas API</span>
-                    <span class="tag">Game Dev</span>
-                </div>
-                <div class="project-links">
-                    <a href="#" class="project-link link-secondary">Learn More</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Completed Project -->
-        <div class="project-card">
-            <div class="project-status status-completed">✓ Completed</div>
-            <div class="project-image">🔐</div>
-            <div class="project-content">
-                <h3>Password Generator</h3>
-                <p>
-                    Secure password generation tool with customizable options for length,
-                    character types, and complexity. Includes strength meter and copy functionality.
-                </p>
-                <div class="project-tags">
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Security</span>
-                    <span class="tag">UI/UX</span>
-                </div>
-                <div class="project-links">
-                    <a href="#" class="project-link link-primary">Live Demo</a>
-                    <a href="#" class="project-link link-secondary">View Code</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- In Progress Project -->
-        <div class="project-card">
-            <div class="project-status status-progress">⚡ In Progress</div>
-            <div class="project-image">📝</div>
-            <div class="project-content">
-                <h3>Markdown Blog Engine</h3>
-                <p>
-                    Static site generator that converts Markdown files into a fully-featured blog
-                    with syntax highlighting, search, and RSS feed generation.
-                </p>
-                <div class="project-tags">
-                    <span class="tag">Node.js</span>
-                    <span class="tag">Markdown</span>
-                    <span class="tag">SSG</span>
-                </div>
-                <div class="project-links">
-                    <a href="#" class="project-link link-secondary">View Progress</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Planned Project -->
-        <div class="project-card">
-            <div class="project-status status-planned">📋 Planned</div>
-            <div class="project-image">🤖</div>
-            <div class="project-content">
-                <h3>AI Chat Assistant</h3>
-                <p>
-                    Personal chatbot assistant integrating with various AI APIs to help with
-                    daily tasks, reminders, and information retrieval through natural language.
-                </p>
-                <div class="project-tags">
-                    <span class="tag">Python</span>
-                    <span class="tag">AI/ML</span>
-                    <span class="tag">NLP</span>
-                </div>
-                <div class="project-links">
-                    <a href="#" class="project-link link-secondary">Learn More</a>
                 </div>
             </div>
         </div>
@@ -622,37 +579,38 @@
 <!-- Skills Section -->
 <section id="skills">
     <h2>Technical Skills</h2>
-    <p class="section-subtitle">Technologies and tools I work with</p>
+    <p class="section-subtitle">I grew up with these technologies and tools.
+        Now they are the backdrop to guided-AI development</p>
 
     <div class="skills-grid">
         <div class="skill-category">
             <h3>Frontend Development</h3>
             <div class="skill-list">
-                <span class="skill-item">HTML5</span>
-                <span class="skill-item">CSS3</span>
-                <span class="skill-item">JavaScript (ES6+)</span>
-                <span class="skill-item">React</span>
-                <span class="skill-item">Responsive Design</span>
+                <span class="skill-item">HTML</span>
+                <span class="skill-item">CSS</span>
+                <span class="skill-item">JavaScript</span>
             </div>
         </div>
 
         <div class="skill-category">
             <h3>Backend & Tools</h3>
             <div class="skill-list">
-                <span class="skill-item">Node.js</span>
+                <span class="skill-item">Java</span>
                 <span class="skill-item">Python</span>
                 <span class="skill-item">Git & GitHub</span>
                 <span class="skill-item">REST APIs</span>
+                <span class="skill-item">IntelliJ</span>
                 <span class="skill-item">VS Code</span>
+                <span class="skill-item">Ubuntu 24.04</span>
             </div>
         </div>
 
         <div class="skill-category">
             <h3>Currently Learning</h3>
             <div class="skill-list">
-                <span class="skill-item">TypeScript</span>
-                <span class="skill-item">Database Design</span>
-                <span class="skill-item">Testing (Jest)</span>
+                <span class="skill-item">HomeAssistant</span>
+                <span class="skill-item">Spec Driven AI</span>
+                <span class="skill-item">SDLC in 2025</span>
                 <span class="skill-item">Docker</span>
                 <span class="skill-item">Cloud Platforms</span>
             </div>
@@ -663,9 +621,9 @@
             <div class="skill-list">
                 <span class="skill-item">Problem Solving</span>
                 <span class="skill-item">Self-Learning</span>
-                <span class="skill-item">Documentation</span>
-                <span class="skill-item">Debugging</span>
+                <span class="skill-item">Team / Tech Lead</span>
                 <span class="skill-item">Project Planning</span>
+                <span class="skill-item">Getting IT Done</span>
             </div>
         </div>
     </div>
