--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Davollo - Software Engineer Portfolio</title>
+    <title>Davollo - A Software Engineer's Portfolio</title>
+    
+    <!-- Inline SVG Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><defs><linearGradient id='g' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%232563eb'/><stop offset='100%' style='stop-color:%2306b6d4'/></linearGradient></defs><rect width='64' height='64' rx='12' fill='%230f172a'/><path d='M 18 16 L 32 16 C 42 16 48 22 48 32 C 48 42 42 48 32 48 L 18 48 Z M 26 24 L 26 40 L 32 40 C 37 40 40 37 40 32 C 40 27 37 24 32 24 Z' fill='url(%23g)'/><circle cx='52' cy='16' r='4' fill='%2306b6d4' opacity='0.8'/></svg>">
+    
     <style>
         :root {
             --primary-color: #2563eb;
